Resolving old gen iPhone SE issues with text overlapping poster edges

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,6 +265,13 @@ button:active {
 
 @media screen and (max-width: 325px) {
 
+    .coronaposter {
+
+        width: 100%;
+
+    }
+
+
     .coronaposter-container {
         width: 100%;
     }
